Working with Fluent API

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "cnTask" : "Data Source=DESKTOP-T7PGRPB; Initial Catalog=TaskDB; user id=sa; password=andresDML7; TrustServerCertificate=True"
+  }
 }
